--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_evi.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_evi.xml
@@ -93,6 +93,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical"
         android:background="@android:color/white"/>
 
